argocd/base/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:1.43.4.10903-e5521bd8c
          imagePullPolicy: IfNotPresent
          ports:
            - name: plex
              containerPort: 32400
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "8000m"
              memory: "8Gi"
          livenessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /movies
              subPath: movies
            - name: media
              mountPath: /tv
              subPath: tv
            - name: media
              mountPath: /music
              subPath: music
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
