argocd/base/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
    - name: plex
      port: 32400
      targetPort: 32400
      nodePort: 32400
  type: NodePort
